[gd_scene load_steps=15 format=3 uid="uid://4gou4dfa1ija"]

[ext_resource type="Script" path="res://Code/SceneCode/Screens/MainMenu.gd" id="1_xp3rd"]
[ext_resource type="Resource" uid="uid://cexehs6jvcmbd" path="res://Resources/Entity Data/Enemy Data/EnemyEntity/EasyEntity.tres" id="6_eryj0"]
[ext_resource type="Resource" uid="uid://ce2oymswsnn6j" path="res://Resources/Entity Data/Enemy Data/EnemyEntity/Prokyon.tres" id="7_e8ky1"]
[ext_resource type="Resource" uid="uid://b6jbgarv46a4q" path="res://Resources/Entity Data/Enemy Data/EnemyEntity/Fornax.tres" id="7_pf812"]
[ext_resource type="Resource" uid="uid://dmm6qvo3byjgc" path="res://Resources/Entity Data/Enemy Data/EnemyEntity/WaterEntity.tres" id="8_2bbwp"]
[ext_resource type="Resource" uid="uid://bdrlqlvn6kv8c" path="res://Resources/Entity Data/Enemy Data/EnemyEntity/CrovusNew.tres" id="9_m6byd"]
[ext_resource type="PackedScene" uid="uid://2rhs8p7a1wo" path="res://Scene/Constants/element.tscn" id="10_l7in5"]
[ext_resource type="Resource" uid="uid://cy3co5wko705g" path="res://Resources/Entity Data/Enemy Data/EnemyEntity/Jishi.tres" id="10_m8dbs"]
[ext_resource type="Resource" uid="uid://clepibgdex38y" path="res://Resources/Entity Data/Enemy Data/EnemyEntity/Ireo.tres" id="11_57rpg"]
[ext_resource type="PackedScene" uid="uid://bcsnxkh6o33lt" path="res://Scene/Constants/phy_element.tscn" id="11_iuwj4"]
[ext_resource type="Theme" uid="uid://bqt13gd00jakt" path="res://Themes/Theme.tres" id="12_c1ybm"]
[ext_resource type="PackedScene" uid="uid://bf5fc1lfuejso" path="res://Scene/Constants/element_triangle.tscn" id="13_n6ucx"]
[ext_resource type="StyleBox" uid="uid://cbmvpuynhcqqe" path="res://Themes/HasSingle/Pannel.tres" id="21_uf183"]
[ext_resource type="PackedScene" uid="uid://1malajsj05pg" path="res://Scene/SideMenus/options_menu.tscn" id="22_oq3rd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
focus_mode = 2
script = ExtResource("1_xp3rd")
enemyEntities = Array[Resource("res://Code/ResourceMakers/Entity/EntityMaker.gd")]([ExtResource("6_eryj0"), ExtResource("7_e8ky1"), ExtResource("8_2bbwp"), ExtResource("9_m6byd"), ExtResource("10_m8dbs"), ExtResource("7_pf812"), ExtResource("11_57rpg")])
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -24.0
offset_right = 1286.0
offset_bottom = 801.0
color = Color(0.294118, 0.458824, 0.494118, 0.639216)
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_left = 401.0
offset_top = 96.0
offset_right = 887.0
offset_bottom = 188.0
theme = ExtResource("12_c1ybm")
theme_override_font_sizes/normal_font_size = 64
text = "RPG PROTOTYPE"
metadata/_edit_lock_ = true

[node name="ElementTriangle" parent="ColorRect" instance=ExtResource("13_n6ucx")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -163.0
offset_top = 163.0
offset_right = -34.0
offset_bottom = 276.0
grow_horizontal = 0
grow_vertical = 1

[node name="PlayerSide" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="PlayerMenu" type="GridContainer" parent="PlayerSide"]
layout_mode = 0
offset_left = 40.0
offset_top = 192.0
offset_right = 480.0
offset_bottom = 246.0
theme = ExtResource("12_c1ybm")
theme_override_constants/h_separation = 70
columns = 3

[node name="Player1Level" type="SpinBox" parent="PlayerSide/PlayerMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../EnemySide/EnemyMenu/Enemy3/EnemyChoice3")
focus_neighbor_top = NodePath("../../../Navigation/Buttons/ChipButton")
focus_neighbor_right = NodePath("../Player2Level")
focus_neighbor_bottom = NodePath("../Player1/PlayerMenu1")
min_value = 1.0
max_value = 30.0
value = 5.0
custom_arrow_step = 1.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="PlayerSide/PlayerMenu/Player1Level"]
layout_mode = 0
offset_top = -30.0
offset_right = 76.0
offset_bottom = -4.0
text = "Level"

[node name="Player2Level" type="SpinBox" parent="PlayerSide/PlayerMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Player1Level")
focus_neighbor_top = NodePath("../../../Navigation/Buttons/GearButton")
focus_neighbor_right = NodePath("../Player3Level")
focus_neighbor_bottom = NodePath("../Player2/PlayerMenu2")
min_value = 1.0
max_value = 30.0
value = 5.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="PlayerSide/PlayerMenu/Player2Level"]
layout_mode = 0
offset_top = -30.0
offset_right = 76.0
offset_bottom = -4.0
text = "Level"

[node name="Player3Level" type="SpinBox" parent="PlayerSide/PlayerMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Player2Level")
focus_neighbor_top = NodePath("../../../Navigation/Buttons/ItemButton")
focus_neighbor_right = NodePath("../../../EnemySide/EnemyMenu/Enemy1/EnemyChoice1")
focus_neighbor_bottom = NodePath("../Player3/PlayerMenu3")
min_value = 1.0
max_value = 30.0
value = 5.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="PlayerSide/PlayerMenu/Player3Level"]
layout_mode = 0
offset_top = -30.0
offset_right = 76.0
offset_bottom = -4.0
text = "Level"

[node name="Player1" type="PanelContainer" parent="PlayerSide/PlayerMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../EnemySide/EnemyMenu/Enemy3/EnemyChoice3")
focus_neighbor_top = NodePath("../Player1Level")
focus_neighbor_right = NodePath("../Player2/PlayerMenu2")
focus_neighbor_bottom = NodePath("../../../Navigation/Buttons/ChipButton")
metadata/_edit_group_ = true

[node name="PlayerMenu1" type="OptionButton" parent="PlayerSide/PlayerMenu/Player1"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../../../EnemySide/EnemyMenu/Enemy3/EnemyChoice3")
focus_neighbor_top = NodePath("../../Player1Level")
focus_neighbor_right = NodePath("../../Player2/PlayerMenu2")
focus_neighbor_bottom = NodePath("../../../../Navigation/Buttons/ChipButton")
item_count = 4
selected = 0
allow_reselect = true
popup/item_0/text = "DREAMER"
popup/item_0/id = 0
popup/item_1/text = "Lonna"
popup/item_1/id = 1
popup/item_2/text = "Damir"
popup/item_2/id = 2
popup/item_3/text = "Pepper"
popup/item_3/id = 3
metadata/_edit_lock_ = true

[node name="Player2" type="PanelContainer" parent="PlayerSide/PlayerMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Player1/PlayerMenu1")
focus_neighbor_top = NodePath("../Player2Level")
focus_neighbor_right = NodePath("../Player3/PlayerMenu3")
focus_neighbor_bottom = NodePath("../../../Navigation/Buttons/GearButton")
metadata/_edit_group_ = true

[node name="PlayerMenu2" type="OptionButton" parent="PlayerSide/PlayerMenu/Player2"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 2
allow_reselect = true
popup/item_0/text = "DREAMER"
popup/item_0/id = 0
popup/item_1/text = "Lonna"
popup/item_1/id = 1
popup/item_2/text = "Damir"
popup/item_2/id = 2
popup/item_3/text = "Pepper"
popup/item_3/id = 3
metadata/_edit_lock_ = true

[node name="Player3" type="PanelContainer" parent="PlayerSide/PlayerMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../Player2/PlayerMenu2")
focus_neighbor_top = NodePath("../Player3Level")
focus_neighbor_right = NodePath("../../../EnemySide/EnemyMenu/Enemy1/EnemyChoice1")
focus_neighbor_bottom = NodePath("../../../Navigation/Buttons/ItemButton")
metadata/_edit_group_ = true

[node name="PlayerMenu3" type="OptionButton" parent="PlayerSide/PlayerMenu/Player3"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../Player3Level")
focus_neighbor_right = NodePath("../../Player1/PlayerMenu1")
focus_neighbor_bottom = NodePath("../../../../Navigation/Buttons/ItemButton")
item_count = 4
selected = 3
allow_reselect = true
popup/item_0/text = "DREAMER"
popup/item_0/id = 0
popup/item_1/text = "Lonna"
popup/item_1/id = 1
popup/item_2/text = "Damir"
popup/item_2/id = 2
popup/item_3/text = "Pepper"
popup/item_3/id = 3
metadata/_edit_lock_ = true

[node name="PlayerStats" type="HBoxContainer" parent="PlayerSide"]
layout_mode = 0
offset_left = 20.0
offset_top = 354.0
offset_right = 493.0
offset_bottom = 724.0

[node name="Player1Stats" type="PanelContainer" parent="PlayerSide/PlayerStats"]
custom_minimum_size = Vector2(160, 370)
layout_mode = 2
theme = ExtResource("12_c1ybm")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Stats1" type="RichTextLabel" parent="PlayerSide/PlayerStats/Player1Stats"]
unique_name_in_owner = true
layout_mode = 2

[node name="Player2Stats" type="PanelContainer" parent="PlayerSide/PlayerStats"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("12_c1ybm")
metadata/_edit_group_ = true

[node name="Stats2" type="RichTextLabel" parent="PlayerSide/PlayerStats/Player2Stats"]
unique_name_in_owner = true
layout_mode = 2

[node name="Player3Stats" type="PanelContainer" parent="PlayerSide/PlayerStats"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("12_c1ybm")
metadata/_edit_group_ = true

[node name="Stats3" type="RichTextLabel" parent="PlayerSide/PlayerStats/Player3Stats"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerElements" type="GridContainer" parent="PlayerSide"]
layout_mode = 0
offset_left = 124.0
offset_top = 363.0
offset_right = 498.0
offset_bottom = 447.0
theme_override_constants/h_separation = 125
columns = 3

[node name="PlayerElement1" parent="PlayerSide/PlayerElements" instance=ExtResource("10_l7in5")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PlayerElement2" parent="PlayerSide/PlayerElements" instance=ExtResource("10_l7in5")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PlayerElement3" parent="PlayerSide/PlayerElements" instance=ExtResource("10_l7in5")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PlayerPhyElement1" parent="PlayerSide/PlayerElements" instance=ExtResource("11_iuwj4")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PlayerPhyElement2" parent="PlayerSide/PlayerElements" instance=ExtResource("11_iuwj4")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PlayerPhyElement3" parent="PlayerSide/PlayerElements" instance=ExtResource("11_iuwj4")]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="EnemySide" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="EnemyMenu" type="HBoxContainer" parent="EnemySide"]
layout_mode = 0
offset_left = 771.0
offset_top = 259.0
offset_right = 1251.0
offset_bottom = 288.0
theme = ExtResource("12_c1ybm")
theme_override_constants/separation = 45
metadata/_edit_lock_ = true

[node name="Enemy1" type="PanelContainer" parent="EnemySide/EnemyMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="EnemyChoice1" type="OptionButton" parent="EnemySide/EnemyMenu/Enemy1"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../../../PlayerSide/PlayerMenu/Player3/PlayerMenu3")
focus_neighbor_right = NodePath("../../Enemy2/EnemyChoice2")
item_count = 8
selected = 3
popup/item_0/text = "lv1 Amebozo"
popup/item_0/id = 0
popup/item_1/text = "lv4 Buffer"
popup/item_1/id = 1
popup/item_2/text = "lv8 Boss"
popup/item_2/id = 2
popup/item_3/text = "lv12 Healer"
popup/item_3/id = 3
popup/item_4/text = "lv 16 Debuffer"
popup/item_4/id = 4
popup/item_5/text = "lv20 Ailment"
popup/item_5/id = 5
popup/item_6/text = "lv30 Ireo"
popup/item_6/id = 6
popup/item_7/text = "None"
popup/item_7/id = 7

[node name="Enemy2" type="PanelContainer" parent="EnemySide/EnemyMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="EnemyChoice2" type="OptionButton" parent="EnemySide/EnemyMenu/Enemy2"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../Enemy1/EnemyChoice1")
focus_neighbor_right = NodePath("../../Enemy3/EnemyChoice3")
item_count = 7
selected = 3
popup/item_0/text = "lv1 Amebozo"
popup/item_0/id = 0
popup/item_1/text = "lv4 Buffer"
popup/item_1/id = 1
popup/item_2/text = "lv8 Boss"
popup/item_2/id = 2
popup/item_3/text = "lv12 Healer"
popup/item_3/id = 3
popup/item_4/text = "lv 16 Debuffer"
popup/item_4/id = 4
popup/item_5/text = "lv20 Ailment"
popup/item_5/id = 6
popup/item_6/text = "lv30 Ireo"
popup/item_6/id = 5

[node name="Enemy3" type="PanelContainer" parent="EnemySide/EnemyMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="EnemyChoice3" type="OptionButton" parent="EnemySide/EnemyMenu/Enemy3"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../Enemy2/EnemyChoice2")
focus_neighbor_right = NodePath("../../../../PlayerSide/PlayerMenu/Player1/PlayerMenu1")
item_count = 8
selected = 3
popup/item_0/text = "lv1 Amebozo"
popup/item_0/id = 0
popup/item_1/text = "lv4 Buffer"
popup/item_1/id = 1
popup/item_2/text = "lv8 Boss"
popup/item_2/id = 2
popup/item_3/text = "lv12 Healer"
popup/item_3/id = 3
popup/item_4/text = "lv 16 Debuffer"
popup/item_4/id = 4
popup/item_5/text = "lv20 Ailment"
popup/item_5/id = 5
popup/item_6/text = "lv30 Ireo"
popup/item_6/id = 6
popup/item_7/text = "None"
popup/item_7/id = 7

[node name="EnemyLineup" type="PanelContainer" parent="EnemySide"]
layout_mode = 0
offset_left = 755.0
offset_top = 522.0
offset_right = 1229.0
offset_bottom = 724.0
theme = ExtResource("12_c1ybm")

[node name="RichTextLabel" type="RichTextLabel" parent="EnemySide/EnemyLineup"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Elements" type="GridContainer" parent="EnemySide"]
layout_mode = 0
offset_left = 771.0
offset_top = 547.0
offset_right = 855.0
offset_bottom = 697.0
theme_override_constants/v_separation = 25
columns = 2

[node name="EnemyElement" parent="EnemySide/Elements" instance=ExtResource("10_l7in5")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyPhyElement" parent="EnemySide/Elements" instance=ExtResource("11_iuwj4")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyElement2" parent="EnemySide/Elements" instance=ExtResource("10_l7in5")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyPhyElement2" parent="EnemySide/Elements" instance=ExtResource("11_iuwj4")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyElement3" parent="EnemySide/Elements" instance=ExtResource("10_l7in5")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyPhyElement3" parent="EnemySide/Elements" instance=ExtResource("11_iuwj4")]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerFirstToggle" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 771.0
offset_top = 208.0
offset_right = 946.0
offset_bottom = 232.0
theme = ExtResource("12_c1ybm")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerFirstToggle"]
layout_mode = 2
size_flags_horizontal = 0

[node name="PlayerOrder" type="CheckButton" parent="PlayerFirstToggle/HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../../../EnemySide/EnemyMenu/Enemy2/EnemyChoice2")
focus_neighbor_bottom = NodePath("../../../EnemySide/EnemyMenu/Enemy1/EnemyChoice1")
text = " Player First [X]"

[node name="Label" type="Label" parent="PlayerFirstToggle/HBoxContainer"]
layout_mode = 2
text = "ON"

[node name="Navigation" type="Control" parent="."]
anchors_preset = 0
offset_top = -24.0
offset_right = 40.0
offset_bottom = 16.0
metadata/_edit_lock_ = true

[node name="Buttons" type="Control" parent="Navigation"]
anchors_preset = 0
offset_left = 559.0
offset_top = 696.0
offset_right = 599.0
offset_bottom = 736.0

[node name="HelpButton" type="Button" parent="Navigation/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 4.0
anchor_bottom = 1.125
offset_top = -9.0
focus_neighbor_top = NodePath("../FightButton")
theme = ExtResource("12_c1ybm")
text = "What is this? [B]"

[node name="FightButton" type="Button" parent="Navigation/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.325
anchor_top = -1.65
anchor_right = 4.375
anchor_bottom = -0.65
focus_neighbor_top = NodePath("../../MusicMenu/MenuButton")
focus_neighbor_bottom = NodePath("../HelpButton")
text = "START FIGHTING [Start]"

[node name="OptionButton" type="Button" parent="Navigation/Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = -3.125
anchor_right = 3.65
anchor_bottom = -2.125
text = "Options [Select]"

[node name="ChipButton" type="Button" parent="Navigation/Buttons"]
layout_mode = 0
offset_left = -539.0
offset_top = -369.0
offset_right = -384.0
offset_bottom = -335.0
focus_neighbor_left = NodePath("../../../EnemySide/EnemyMenu/Enemy3/EnemyChoice3")
focus_neighbor_top = NodePath("../../../PlayerSide/PlayerMenu/Player1/PlayerMenu1")
focus_neighbor_right = NodePath("../GearButton")
focus_neighbor_bottom = NodePath("../../../PlayerSide/PlayerMenu/Player1Level")
text = "SET CHIPS"

[node name="ItemButton" type="Button" parent="Navigation/Buttons"]
layout_mode = 0
offset_left = -212.0
offset_top = -369.0
offset_right = -57.0
offset_bottom = -335.0
focus_neighbor_left = NodePath("../GearButton")
focus_neighbor_top = NodePath("../../../PlayerSide/PlayerMenu/Player3/PlayerMenu3")
focus_neighbor_right = NodePath("../../../EnemySide/EnemyMenu/Enemy1/EnemyChoice1")
focus_neighbor_bottom = NodePath("../../../PlayerSide/PlayerMenu/Player3Level")
text = "SET ITEMS"

[node name="GearButton" type="Button" parent="Navigation/Buttons"]
layout_mode = 0
offset_left = -375.0
offset_top = -369.0
offset_right = -220.0
offset_bottom = -335.0
focus_neighbor_left = NodePath("../ChipButton")
focus_neighbor_top = NodePath("../../../PlayerSide/PlayerMenu/Player2/PlayerMenu2")
focus_neighbor_right = NodePath("../ItemButton")
focus_neighbor_bottom = NodePath("../../../PlayerSide/PlayerMenu/Player2Level")
text = "SET GEAR"

[node name="MusicMenu" type="PanelContainer" parent="Navigation"]
layout_mode = 0
offset_left = 575.0
offset_top = 408.0
offset_right = 704.0
offset_bottom = 437.0
theme = ExtResource("12_c1ybm")

[node name="MenuButton" type="OptionButton" parent="Navigation/MusicMenu"]
layout_mode = 2
focus_neighbor_left = NodePath("../../Buttons/ItemButton")
focus_neighbor_right = NodePath("../../../EnemySide/EnemyMenu/Enemy1/EnemyChoice1")
focus_neighbor_bottom = NodePath("../../Buttons/FightButton")
item_count = 4
selected = 0
popup/item_0/text = "None [Change Y]"
popup/item_0/id = 0
popup/item_1/text = "Blair Dame"
popup/item_1/id = 1
popup/item_2/text = "...Delve!!"
popup/item_2/id = 2
popup/item_3/text = "Miitopia Boss"
popup/item_3/id = 3
metadata/_edit_lock_ = true

[node name="HelpMenu" type="Control" parent="Navigation"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 60.0
offset_top = 40.0
offset_right = 136.0
offset_bottom = 72.0
theme = ExtResource("12_c1ybm")

[node name="HelpPanel" type="PanelContainer" parent="Navigation/HelpMenu"]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 681.0
theme = ExtResource("12_c1ybm")
theme_override_styles/panel = ExtResource("21_uf183")
metadata/_edit_lock_ = true

[node name="ExitPanel" type="PanelContainer" parent="Navigation/HelpMenu"]
layout_mode = 0
offset_left = 499.0
offset_top = 607.0
offset_right = 648.0
offset_bottom = 647.0
theme = ExtResource("12_c1ybm")
metadata/_edit_lock_ = true

[node name="ExitButton" type="Button" parent="Navigation/HelpMenu/ExitPanel"]
layout_mode = 2
text = "Exit"
metadata/_edit_lock_ = true

[node name="Text" type="Control" parent="Navigation/HelpMenu"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/HelpMenu/Text"]
layout_mode = 0
offset_left = 436.0
offset_top = 32.0
offset_right = 756.0
offset_bottom = 97.0
theme_override_font_sizes/normal_font_size = 40
text = "How this works"

[node name="RichTextLabel6" type="RichTextLabel" parent="Navigation/HelpMenu/Text"]
layout_mode = 0
offset_left = 20.0
offset_top = 143.0
offset_right = 377.0
offset_bottom = 681.0
text = "Ailments, aka Status Consitions
Most can be stacked 3 times for worsening effects with the only exception being Overdrive
You can only have one Ailment stacked

Overdrive:
1: A damage boost while the Ailment is up
2: Access to Burst, a high damage all targetting move that consumes Overdrive upon use
3: Immediete access to another turn

XSofts are a seperate kind of Status Effect
The first Soft of a certain element will make the entity take 15% more damage to that element
proceeeding Softs of the same element will add 10%
The six softs are Fire,Water,Elec,Slash,Crush & Pierce 

They will be applied whener you crit, with PhyElements taking priority
You can only have a total of 3 softs of any type"

[node name="RichTextLabel7" type="RichTextLabel" parent="Navigation/HelpMenu/Text"]
layout_mode = 0
offset_left = 27.0
offset_top = 97.0
offset_right = 347.0
offset_bottom = 162.0
theme_override_font_sizes/normal_font_size = 25
text = "Ailments & Status"

[node name="RichTextLabel2" type="RichTextLabel" parent="Navigation/HelpMenu/Text"]
layout_mode = 0
offset_left = 474.0
offset_top = 103.0
offset_right = 631.0
offset_bottom = 143.0
theme_override_font_sizes/normal_font_size = 25
text = "BASIC STATS"

[node name="RichTextLabel3" type="RichTextLabel" parent="Navigation/HelpMenu/Text"]
layout_mode = 0
offset_left = 803.0
offset_top = 147.0
offset_right = 1144.0
offset_bottom = 647.0
text = "Regular Elements: There are four regular elements: Fire, Water, Elec and Neutral. 
Fire, Water and Elec have a RPS system against eachother the winning element takes less damage, deals more damage and has a higher chance to inflict Ailments. 
If a move has a non-Neutral element tied to it, the defender will have to take that element's damage Otherwise offensive element depends on user's element (Neutral using neutral will be just neutral)

PhyElements: Some moves have PhyElements Slash/Crush/Pierce.
 If an entity has a Weakness, it'll deal more damage, and Resistance will deal less damage. However Weaknesses take priority even if they have a Resistance at the same time. Regular attacks use the user's PhyElement, all others depend on the move.

*Group targetting hits entities of the same element. If it only hits one, then it'll hit them twice"

[node name="RichTextLabel5" type="RichTextLabel" parent="Navigation/HelpMenu/Text"]
layout_mode = 0
offset_left = 821.0
offset_top = 97.0
offset_right = 973.0
offset_bottom = 143.0
theme_override_font_sizes/normal_font_size = 25
text = "Elements"

[node name="RichTextLabel4" type="RichTextLabel" parent="Navigation/HelpMenu/Text"]
layout_mode = 0
offset_left = 396.0
offset_top = 147.0
offset_right = 798.0
offset_bottom = 506.0
text = "HP: When it hits 0 you die
LP: Spent whenever using certain skills
TP: Both parties have a collective TP gauge. It's spent whenever taking any action.
CPU: Determines the ammount of Chips a character can equip. Different chips have different costs.

Strength: Physical Attack | Toughness: Physical Defense
Ballistics: Ballistic Attack | Resistance: Ballistic Defense
Speed: Lowers TP Cost
Luck: Raises user's hit/avoid of Ailments and Crits

There are 4 kind of stat buffs: Attack, Defense, Speed and Luck.
They can be applied twice with each stack adding 30%
They will decay by 5% every turn"

[node name="OptionsMenu" parent="." instance=ExtResource("22_oq3rd")]
visible = false

[connection signal="value_changed" from="PlayerSide/PlayerMenu/Player1Level" to="." method="levelChange" binds= [0]]
[connection signal="value_changed" from="PlayerSide/PlayerMenu/Player2Level" to="." method="levelChange" binds= [1]]
[connection signal="value_changed" from="PlayerSide/PlayerMenu/Player3Level" to="." method="levelChange" binds= [2]]
[connection signal="item_selected" from="PlayerSide/PlayerMenu/Player1/PlayerMenu1" to="." method="playerChoiceChanged" binds= [0]]
[connection signal="item_selected" from="PlayerSide/PlayerMenu/Player2/PlayerMenu2" to="." method="playerChoiceChanged" binds= [1]]
[connection signal="item_selected" from="PlayerSide/PlayerMenu/Player3/PlayerMenu3" to="." method="playerChoiceChanged" binds= [2]]
[connection signal="item_selected" from="EnemySide/EnemyMenu/Enemy1/EnemyChoice1" to="." method="enemyChoiceChanged"]
[connection signal="item_selected" from="EnemySide/EnemyMenu/Enemy2/EnemyChoice2" to="." method="enemyChoiceChanged"]
[connection signal="item_selected" from="EnemySide/EnemyMenu/Enemy3/EnemyChoice3" to="." method="enemyChoiceChanged"]
[connection signal="toggled" from="PlayerFirstToggle/HBoxContainer/PlayerOrder" to="." method="_on_player_order_toggled"]
[connection signal="pressed" from="Navigation/Buttons/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="Navigation/Buttons/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="Navigation/Buttons/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="Navigation/Buttons/ChipButton" to="." method="_on_chip_button_pressed"]
[connection signal="pressed" from="Navigation/Buttons/ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="Navigation/Buttons/GearButton" to="." method="_on_gear_button_pressed"]
[connection signal="item_selected" from="Navigation/MusicMenu/MenuButton" to="." method="_on_music_button_item_selected"]
[connection signal="pressed" from="Navigation/MusicMenu/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Navigation/HelpMenu/ExitPanel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="main" from="OptionsMenu" to="." method="_on_options_menu_main"]
[connection signal="makeNoise" from="OptionsMenu" to="." method="_on_menu_button_pressed"]
[connection signal="testMusic" from="OptionsMenu" to="." method="_on_options_menu_test_music"]
